[2.8] broken drag'n'drop parenting in outliner #56423

Closed
opened 2018-08-17 03:37:31 +02:00 by Jacob Luiten · 13 comments

Windows 10,
NVIDIA GeForce GTX 1060 "Laptop"

Blender Version
Broken: 2.80
Worked: 2.79

Tried to parent an empty object to a Lattice and the window closed crashed

Windows 10, NVIDIA GeForce GTX 1060 "Laptop" **Blender Version** Broken: 2.80 Worked: 2.79 Tried to parent an empty object to a Lattice and the window closed *crashed*
Author

Added subscriber: @IonUppercut

Added subscriber: @IonUppercut

Added subscriber: @Thondal

Added subscriber: @Thondal

Did you test this in todays release(17th of august)?

What kind of empty? I've tried with "empty - plain axis" then parent the lattice to the empty and vice versa and it stays open.
My setup is different though:
Windows 10
Intel HD graphics 620

Did you test this in todays release(17th of august)? What kind of empty? I've tried with "empty - plain axis" then parent the lattice to the empty and vice versa and it stays open. My setup is different though: Windows 10 Intel HD graphics 620

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/wiki/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.
Author

No I dint know there was a release on the 17th. It was the August 14th release. I copied the date from the file created proprieties.

I was following the "Modeling an Ornamental Shield in Blender (2.8)" testing out the new blender when I had an idea

in order to give the shield it's curve, the video said to use a lattice's bend modifier to give it a curve. So what I tried to do was have a base empty that held all the objects under it, so instead of moving every object individual I can move them all by just moving the empty. so I tried to parent the empty "plain axis" to the lattice and it crashed.
if it works, I made a video showing what happened

2018-08-16 18-11-44.mp4

p.s. just tried it on the newest build, Aug 17 2018 02:48:49, still happens

No I dint know there was a release on the 17th. It was the August 14th release. I copied the date from the file created proprieties. I was following the "Modeling an Ornamental Shield in Blender (2.8)" testing out the new blender when I had an idea in order to give the shield it's curve, the video said to use a lattice's bend modifier to give it a curve. So what I tried to do was have a base empty that held all the objects under it, so instead of moving every object individual I can move them all by just moving the empty. so I tried to parent the empty "plain axis" to the lattice and it crashed. if it works, I made a video showing what happened [2018-08-16 18-11-44.mp4](https://archive.blender.org/developer/F4265336/2018-08-16_18-11-44.mp4) p.s. just tried it on the newest build, Aug 17 2018 02:48:49, still happens

Added subscriber: @zeauro

Added subscriber: @zeauro

I can reproduce the problem with armature or a curve.

In attached.blend, try to set armature or lattice or curve as parent of empty by using outliner.
It will crash.
parenting_outliner.blend
parenting_outliner.crash.txt

I can reproduce the problem with armature or a curve. In attached.blend, try to set armature or lattice or curve as parent of empty by using outliner. It will crash. [parenting_outliner.blend](https://archive.blender.org/developer/F4355608/parenting_outliner.blend) [parenting_outliner.crash.txt](https://archive.blender.org/developer/F4355612/parenting_outliner.crash.txt)
Bastien Montagne self-assigned this 2018-09-03 17:22:07 +02:00

Eeeek… Parenting operation in outliner is actually 100% broken, even when not crashing… Fix incoming.

Eeeek… Parenting operation in outliner is actually 100% broken, even when not crashing… Fix incoming.

This issue was referenced by b46e987a70

This issue was referenced by b46e987a70682fcfc227ec71e9726c3ad6a230db

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Bastien Montagne changed title from 2.80 ‎Monday, ‎August ‎13, ‎2018, ‏‎7:20:23 PM to [2.8] broken drag'n'drop parenting in outliner 2018-09-03 17:28:26 +02:00

Added subscriber: @briandines

Added subscriber: @briandines

Is this actually fixed. I am using a build from the last week (6th dec 2018) and cannot parent items

I appended 2 models into a clean project and then tried to parent some of the meshes - really basic stuff here, cubes and cylinders, and it just does nothing.

Is this actually fixed. I am using a build from the last week (6th dec 2018) and cannot parent items I appended 2 models into a clean project and then tried to parent some of the meshes - really basic stuff here, cubes and cylinders, and it just does nothing.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56423
No description provided.