Fix T56423: Fully broken drag'n'drop parenting in Outliner.

`BKE_libblock_find_name()` expects ID names *without* ID type 'prefix'...